--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7ff45bc9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "18"
+       "(True, False)"
       ]
      },
      "execution_count": 1,
@@ -18,8 +18,17 @@
     }
    ],
    "source": [
-    "6*3    "
+    "# 깜짝 퀴즈: bool() 함수안에 참과 거짓인 자료형을 각각 쓰고 출력해보세요!\n",
+    "bool(1), bool()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e2f5ee3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
