--- a/03.Square.ipynb
+++ b/03.Square.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8e180281",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "사다리꼴 함수는 trape()이고,사다리꼴의 넓이는 : 9.0\n"
+      "평행사변형 함수는 par()이고,평행사변형의 넓이는 : 6\n"
      ]
     }
    ],
